# native-liblouis

./: .gitignore  .npmignore  NOTICE  README.md  expo-module.config.json  index.html  package-lock.json  package.json
.github/: FUNDING.yml
_expo/static/js/web/: index-6ca90cde7426d35772ccfcaad1622651.js
android/: CMakeLists.txt  build.gradle  expo-module.gradle
android/src/main/cpp/: liblouis-jni.cpp
android/src/main/java/com/henhen1227/nativeliblouis/: NativeLiblouisModule.kt  NativeLiblouisModuleView.kt
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/nativeliblouisexample/: Info.plist
example/ios/nativeliblouisexample.xcodeproj/: project.pbxproj
example/ios/nativeliblouisexample.xcworkspace/: contents.xcworkspacedata
ios/: LICENSE  NativeLiblouisModule.podspec  NativeLiblouisModule.swift  NativeLiblouisModuleView.swift  module.modulemap
ios/liblouis.xcframework/: Info.plist
scripts/: build-all.sh  build-liblouis-android.sh  build-liblouis-ios.sh  build-liblouis-web.sh  build-liblouis.sh  sync-liblouis-tables.sh  tables.mjs
src/: NativeLiblouisModule.android.ts  NativeLiblouisModule.d.ts  NativeLiblouisModule.ios.ts  NativeLiblouisModule.native.ts  NativeLiblouisModule.ts  NativeLiblouisModule.types.ts  NativeLiblouisModule.web.ts  NativeLiblouisModuleView.tsx  NativeLiblouisModuleView.web.tsx  index.ts  types.d.ts
src/liblouis-web/: liblouis.data  liblouis.js
(+5 files in other folders)
